Nuevos cambios en el index

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
 				<div class="col-md-12"  data-texto="Texto3" >
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ullam harum vero laboriosam debitis vitae obcaecati? Laboriosam quisquam voluptatem repudiandae blanditiis ab vitae, voluptas sit voluptate, voluptatibus, placeat quia perferendis.
 				</div>
+				<div class="col-md-12">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et accusantium, corrupti vero atque, dolorum facere harum odit quisquam officiis error, perspiciatis voluptas mollitia! Soluta voluptate voluptatibus maiores velit totam animi!
+				</div>
 				<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 				<script src="js/bootstrap.min.js"></script>
 				<script src="js/ivatec.js"></script>
